New Version of GeoDashJS; carto: text style properties

--- a/src/geodash/plugins/base/schemas/featurelayers.yml
+++ b/src/geodash/plugins/base/schemas/featurelayers.yml
@@ -353,6 +353,12 @@ featurelayers:
                                         - strokeWidth
                                         - strokeColor
                                         - strokeOpacity
+                                        - textAlign
+                                        - textBaseline
+                                        - textCode
+                                        - textColor
+                                        - textContent
+                                        - textFont
                                     - id: value
                                       type: text
                                       label: Property value
