New version of GeoDashJS; toggleFeatureLayer handler; normalize point to latlon on click

--- a/src/geodash/plugins/base/config.yml
+++ b/src/geodash/plugins/base/config.yml
@@ -37,6 +37,7 @@ handlers:
   - switchBaseLayer.js
   #- leaflet/toggleComponent.js
   - ol3/toggleComponent.js
+  - toggleFeatureLayer.js
   - viewChanged.js
   - zoomIn.js
   - zoomOut.js
