--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,8 @@ description: "geodash 0.0.1"
 path:
   geodash: "./src/geodash"
 plugins:
-  - base
+  - { version: master, url: https://github.com/geodashio/geodash-plugin-base.git }
+  - { version: master, url: https://github.com/geodashio/geodash-plugin-handlers.git }
   - { branch: master, url: https://github.com/geodashio/geodash-plugin-filters.git }
   #- file:///home/vagrant/geodash-plugin-filters.git
   - { branch: master, url: https://github.com/geodashio/geodash-plugin-legend.git }
@@ -15,6 +16,8 @@ plugins:
   - download
   - { version: master, url: https://github.com/geodashio/geodash-plugin-overlays.git }
   #- file:///home/vagrant/geodash-plugin-overlays.git
+  - { version: master, url: https://github.com/geodashio/geodash-plugin-navbars.git }
+  #- file:///home/vagrant/geodash-plugin-navbars.git
   - sidebar_toggle_left
   - sidebar_toggle_right
 resources:
