--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ path:
 plugins:
   - { version: master, url: https://github.com/geodashio/geodash-plugin-base.git }
   - { version: master, url: https://github.com/geodashio/geodash-plugin-handlers.git }
-  - { branch: master, url: https://github.com/geodashio/geodash-plugin-filters.git }
+  - { branch: temp_nov24, url: https://github.com/geodashio/geodash-plugin-filters.git }
   #- file:///home/vagrant/geodash-plugin-filters.git
   - { branch: master, url: https://github.com/geodashio/geodash-plugin-legend.git }
   #- file:///home/vagrant/geodash-plugin-legend.git
